--- a/index.html
+++ b/index.html
@@ -562,10 +562,12 @@
             </div>
 
             <div class="export-buttons-group" style="margin-top: 20px;">
-                  
+                 <button id="printBtn">طباعة</button>
+                 <button id="exportAllTeachersBtn">تصدير جداول المعلمين</button>
+                 <button id="exportAllDaysBtn">تصدير الجدول اليومي الكامل</button> 
                  <button id="pdfBtn">PDF</button>
                  <button id="excelBtn">Excel</button>
-                 
+                 <button id="wordBtn">Word</button>
                        <div style="display: flex; align-items: center; justify-content:center; gap: 5px; min-width: 120px;">
                  <input type="checkbox" id="printBwCheckbox" style="width: auto; margin-top: 0;">
                  <label for="printBwCheckbox" style="margin: 0;">بدون ألوان</label>
