--- a/index.html
+++ b/index.html
@@ -636,8 +636,8 @@
             <div style="margin: 15px 0;">
                 <strong>Instapay</strong>
                 <p> امسح الكود التالي للدفع ولا تنسى إرسال الإيصال عبر الواتساب </p>
-                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://ipn.eg/C/Q/mahmoud79070/instapay?ISIGN=23052601MEYCIQDgnRJotmZRLYCzPziG3XymnLOs0eIHPCDK987spx0WKAIhALL1NdIVlXRGIz0SxjjaKN5vs/Sy3IM8mzsaLN0qyhpD" alt="Instapay QR Code">
-                <p><a href="https://ipn.eg/C/Q/mahmoud79070/instapay?ISIGN=23052601MEYCIQDgnRJotmZRLYCzPziG3XymnLOs0eIHPCDK987spx0WKAIhALL1NdIVlXRGIz0SxjjaKN5vs/Sy3IM8mzsaLN0qyhpD" target="_blank">أو اضغط هنا للدفع</a></p>
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://ipn.eg/S/mahmoud79070/instapay/6qDwHf" alt="Instapay QR Code">
+                <p><a href="https://ipn.eg/S/mahmoud79070/instapay/6qDwHf" target="_blank">أو اضغط هنا للدفع</a></p>
             </div>
             <div style="margin: 15px 0;">
                 <a id="whatsapp-link" href="https://wa.me/201552402912?text=%D8%A3%D8%B1%D8%BA%D8%A8%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%A7%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%A7%D9%84%D9%86%D8%B3%D8%AE%D8%A9%20%D8%A7%D9%84%D9%83%D8%A7%D9%85%D9%84%D8%A9%20%D9%84%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D8%AC%20%D9%85%D9%86%D8%B8%D9%85%20%D8%AC%D8%AF%D9%88%D9%84%20%D8%A7%D9%84%D8%AD%D8%B5%D8%B5." target="_blank" style="text-decoration: none; color: #25D366; font-size: 1.2em; display: inline-flex; align-items: center; gap: 8px;">
