--- a/index.html
+++ b/index.html
@@ -651,15 +651,14 @@
     <script>
         // --- ضع معلومات تهيئة Firebase هنا ---
         const firebaseConfig = {
-            apiKey: "AIzaSyCJO-P9t196m4lzBPp7EHjQLUhWikIMH3U",
-            authDomain: "turing-diode-468718-b3.firebaseapp.com",
-            databaseURL: "https://turing-diode-468718-b3-default-rtdb.firebaseio.com",
-            projectId: "turing-diode-468718-b3",
-            storageBucket: "turing-diode-468718-b3.appspot.com",
-            messagingSenderId: "492366336701",
-            appId: "1:492366336701:web:e56c66aaff89c2af709dd4",
-            measurementId: "G-FPRZJRNG29"
-        };
+            apiKey: "AIzaSyCCEHZIqOdjXbEgvt49TzdeqYTm0cO3jro",
+  authDomain: "table-2026.firebaseapp.com",
+  projectId: "table-2026",
+  storageBucket: "table-2026.firebasestorage.app",
+  messagingSenderId: "860273541011",
+  appId: "1:860273541011:web:062d547802dd3cddc1b266",
+  measurementId: "G-TWKVJFF97J"
+};
 
         // --- تهيئة Firebase ---
         firebase.initializeApp(firebaseConfig);
